added previous link img

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <img src="./images/mountains.jpg" alt="natural-landscape" />
         </div>
         <a href="#City" class="previous"
-          >Lets</a>
+          ><img src="./images/back.png" alt="back"
+        /></a>
         <a href="#Winter" class="next"
           ><img src="./images/next.png" alt="next"
         /></a>
