--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <a href="#Forest"><img src="./images/logowhite.svg" alt="" /></a>
       </div>
       <ul class="nav-list">
-        <li class="nav-item"><a href="#Forest" class="nav-link">Forest</a></li>
-        <li class="nav-item"><a href="#Winter" class="nav-link">River</a></li>
-        <li class="nav-item"><a href="#City" class="nav-link">City</a></li>
+        <li class="nav-item"><a href="#Forest" class="nav-link Forest">Forest</a></li>
+        <li class="nav-item"><a href="#River" class="nav-link River">River</a></li>
+        <li class="nav-item"><a href="#City" class="nav-link City">City</a></li>
       </ul>
     </nav>
 
@@ -24,37 +24,22 @@
         <div class="image">
           <img src="./images/mountains.jpg" alt="natural-landscape" />
         </div>
-        <a href="#City" class="previous"
-          ><img src="./images/back.png" alt="back"
-        /></a>
-        <a href="#Winter" class="next"
-          ><img src="./images/next.png" alt="next"
-        /></a>
       </div>
 
-      <div class="section" id="Winter">
+      <div class="section" id="River">
         <div class="image">
           <img src="./images/river.jpg" alt="natural-landscape" />
         </div>
-        <a href="#Forest" class="previous"
-          ><img src="./images/back.png" alt="back"
-        /></a>
-        <a href="#City" class="next"
-          ><img src="./images/next.png" alt="next"
-        /></a>
       </div>
 
       <div class="section" id="City">
         <div class="image">
           <img src="./images/city.jpg" alt="natural-landscape" />
         </div>
-        <a href="#Winter" class="previous"
-          ><img src="./images/back.png" alt="back"
-        /></a>
-        <a href="#Forest" class="next"
-          ><img src="./images/next.png" alt="next"
-        /></a>
       </div>
+    
+      <button  class="back"><img src="./images/back.png" alt=""></button>
+      <button  class="next"><img src="./images/next.png" alt=""></button>
     </div>
   </body>
 
