fixed stacking context

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <a href="#Forest"><img src="./images/logowhite.svg" alt="" /></a>
       </div>
       <ul class="nav-list">
-        <li class="nav-item"><a href="#Forest" class="nav-link Forest">Forest</a></li>
-        <li class="nav-item"><a href="#River" class="nav-link River">River</a></li>
+        <li class="nav-item">
+          <a href="#Forest" class="nav-link Forest active">Forest</a>
+        </li>
+        <li class="nav-item">
+          <a href="#River" class="nav-link River">River</a>
+        </li>
         <li class="nav-item"><a href="#City" class="nav-link City">City</a></li>
       </ul>
     </nav>
@@ -22,24 +26,24 @@
     <div class="row">
       <div class="section" id="Forest">
         <div class="image">
-          <img src="./images/mountains.jpg" alt="natural-landscape" />
+          <img src="./images/mountains.jpg" alt="forest"/>
         </div>
       </div>
 
       <div class="section" id="River">
         <div class="image">
-          <img src="./images/river.jpg" alt="natural-landscape" />
+          <img src="./images/river.jpg" alt="river"/>
         </div>
       </div>
 
       <div class="section" id="City">
         <div class="image">
-          <img src="./images/city.jpg" alt="natural-landscape" />
+          <img src="./images/city.jpg" alt="city"/>
         </div>
       </div>
-    
-      <button  class="back"><img src="./images/back.png" alt=""></button>
-      <button  class="next"><img src="./images/next.png" alt=""></button>
+
+      <button class="back"><img src="./images/back.png" alt="back" /></button>
+      <button class="next"><img src="./images/next.png" alt="next" /></button>
     </div>
   </body>
 
